# Video2Api

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pytest.ini  requirements.txt
_refs/BrowserCluster/: .env.example  .gitignore  Dockerfile  FEATURE_UPDATE.md  FUNCTIONALITY_GUIDE.md  README.md  TASK_FLOW.md  pyproject.toml  requirements.txt
_refs/BrowserCluster/admin/: index.html  package-lock.json  package.json
_refs/BrowserCluster/admin/src/: App.vue
_refs/BrowserCluster/admin/src/api/: index.js
_refs/BrowserCluster/admin/src/router/: index.js
_refs/BrowserCluster/admin/src/stores/: auth.js  stats.js
_refs/BrowserCluster/admin/src/views/: Configs.vue  Home.vue  Login.vue  Nodes.vue  Rules.vue  Schedules.vue  Stats.vue  TaskRecords.vue  Tasks.vue  Users.vue
_refs/BrowserCluster/app/: __init__.py  main.py
_refs/BrowserCluster/app/api/: __init__.py  admin.py  auth.py  nodes.py  rules.py  schedules.py  scrape.py  stats.py  tasks.py  users.py
_refs/BrowserCluster/app/core/: __init__.py  auth.py  browser.py  config.py  drission_browser.py  logger.py  scraper.py
_refs/BrowserCluster/app/db/: __init__.py  mongo.py  redis.py  sqlite.py
_refs/BrowserCluster/app/models/: __init__.py  config.py  node.py  rule.py  schedule.py  task.py  user.py
_refs/BrowserCluster/app/services/: __init__.py  cache_service.py  node_manager.py  oss_service.py  parser_service.py  queue_service.py  scheduler_service.py  task_service.py  worker.py
_refs/BrowserCluster/scripts/: init_admin.py  init_configs_db.py  init_db.py  start_worker.py
admin/: index.html  (+3 more)
(+117 files in other folders)
