[tool.poetry]
name = "browser-cluster"
version = "1.0.0"
description = "Playwright-based distributed browser cluster"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
playwright = "^1.40.0"
pymongo = "^4.6.0"
redis = "^5.0.1"
pika = "^1.3.2"
httpx = "^0.25.2"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
